<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.example.ramonsl.placar.MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@color/primaryLightColor"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margem"
        android:padding="8dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:hint="Time1"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="X"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:hint="Time 2"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/colorAccent"
            android:tooltipText="Nome dos times" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:layout_margin="@dimen/margem"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            style="@style/botao"
            android:contentDescription="@string/btn_resetDesc"
            android:text="@string/btn_reset" />

        <Chronometer
            android:id="@+id/tempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"


            android:gravity="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            style="@style/botao"
            android:contentDescription="@string/btn_startDesc"
            android:text="@string/btn_start" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margem"

        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_addGol1"
            android:layout_width="48dp"
            android:layout_height="48dp"
             android:contentDescription="@string/btn_addGol"
            style="@style/botao"
            android:text="+" />

        <TextView
            android:id="@+id/edGol1"
            style="@style/textos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textos"
            android:text="GOLS"

            />

        <TextView
            android:id="@+id/edGol2"
            style="@style/textos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />
        <Button
            android:id="@+id/btn_addGol2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            style="@style/botao"
            android:contentDescription="@string/btn_addGol"
            android:text="+" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margem"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/btn_addEsc1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            style="@style/botao"
            android:contentDescription="@string/btn_addEsc"
            android:text="+" />

        <TextView
            android:id="@+id/edEsc1"
            style="@style/textos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />

        <TextView
            style="@style/textos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Escanteios" />

        <TextView
            android:id="@+id/edEsc2"
            style="@style/textos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0" />

        <Button
            android:id="@+id/btn_addEsc2"
            android:text="+"
            android:contentDescription="@string/btn_addEsc"
            android:layout_width="48dp"
            android:layout_height="48dp"
            style="@style/botao"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margem"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/btn_addFal1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            style="@style/botao"
            android:contentDescription="@string/btn_addFal"
            android:text="+" />

        <TextView
            android:id="@+id/edFal1"
            style="@style/textos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textos"
            android:text="Faltas"
          />

        <TextView
            android:id="@+id/edFal2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            style="@style/textos"/>

        <Button
            android:id="@+id/btn_addFal2"
            android:text="+"
            android:contentDescription="@string/btn_addFal"
            android:layout_width="48dp"
            android:layout_height="48dp"
            style="@style/botao"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margem"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_addChute1"
            android:text="+"
            android:contentDescription="@string/btn_addChute"
            android:layout_width="48dp"
            android:layout_height="48dp"
            style="@style/botao" />

        <TextView
            android:id="@+id/edChute1"
            style="@style/textos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textos"
            android:text="Chutes a gol"
           />

        <TextView
            android:id="@+id/edChut2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:text="0"
            style="@style/textos"/>

        <Button
            android:id="@+id/btn_addChute2"
            style="@style/botao"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/btn_addChute"
            android:text="+"
            />

    </LinearLayout>


</LinearLayout>
</ScrollView>